完成博客页专栏，修改重定向

--- a/res/welcome.css
+++ b/res/welcome.css
@@ -102,6 +102,8 @@ html {
   justify-content: center;
   font-family: "League-Gothic", Courier;
   text-transform: uppercase;
+  word-break: keep-all;
+  overflow: hidden;
   font-size: 50px;
   font-weight: bold;
   text-align: center;
